# raydevsrs

./: .devcontainer.json  Dockerfile  docker-compose.yml  raydevsrs.Dockerfile
client/: .eslintrc.js  .gitignore  .prettierrc.js  Dockerfile  package-lock.json  package.json  tsconfig.json
client/public/: index.html  manifest.json
client/src/: App.css  App.tsx  api.ts  emotion.d.ts  fonts.tsx
client/src/fonts/: Fonts.css
client/src/hooks/: useIsMobile.tsx
client/src/styles/: colors.ts
devops/: Dockerfile  docker-compose.yml  inventory.yml  playbook.yml
game/: Cargo.toml
game/src/: main.rs
server/: Cargo.toml
server/src/: main.rs
unity/: .gitignore  Dockerfile  mono_crash.0.0.json  mono_crash.0.1.json  mono_crash.0.2.json  mono_crash.0.3.json  mono_crash.10ff2aec57.0.json  mono_crash.188ed86468.0.json  mono_crash.188ed86468.1.json  mono_crash.2b439a2b4e.0.json
unity/Assets/: BulletinBoard.cs  GravitateEffect.cs  InteractButton.cs  InteractController.cs  Interactable.cs  ReactAttack.anim  SmoothCamera.physicMaterial
unity/Assets/Adaptive Performance/: AdaptivePerformanceGeneralSettings.asset
unity/Assets/Enemy/: AirborneEnemy.cs  BringerOfDeath.cs
unity/Assets/InputSystem/: RayInput.cs  RayInput.inputactions
unity/Assets/Prefabs/: Ray.prefab
unity/Assets/Scenes/: Main.unity
unity/Assets/Scripts/: GravitateEffect.cs  GroundCheck.cs  InputManager.cs  RayController.cs
unity/ProjectSettings/: BurstAotSettings_StandaloneOSX.json  EditorBuildSettings.asset  EditorSettings.asset  GraphicsSettings.asset  ProjectSettings.asset  TagManager.asset
(+141 files in other folders)
