[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3"
tokio = { version = "1", features = ["full"] }
actix-web = "4.3.1"
actix-files = "0.6.2"
actix-rt = "2.8.0"
actix-multipart = "0.6.0"
actix-cors = "0.6.4"
